Added a bunch of pictures and saving state

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@ layout: landing-page
 		<!-- One -->
 			<section id="one" class="wrapper style1">
 				<header class="major">
-					<h2>Ipsum feugiat consequat</h2>
-					<p>Tempus adipiscing commodo ut aliquam blandit</p>
+					<h3>hack·er·space</h3>
+					<h4>/ˈhakərˌspās/<h4>
+					<p><i>noun:</i> a place in which people with an interest in computing or technology can gather to work on projects while sharing ideas, equipment, and knowledge.</p>
 				</header>
 				<div class="container">
 					<div class="row">
@@ -14,21 +15,21 @@ layout: landing-page
 							<section class="special box">
 								<i class="icon fa-question major"></i>
 								<h3>Think It</h3>
-								<p>Connect with like-minded hackers, makers, and artists.  </p>
+								<p>Collaborate with our diverse community of like-minded engineers, hackers, makers and artists of all skill levels.</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-gear major"></i>
 								<h3>Build It</h3>
-								<p>We have laser cutters, CNC machines, 3D printers, an electronics lab, even an electron microscope.</p>
+								<p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry and electronics labs, a machine shop, and even an electron microscope.</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-warning major"></i>
 								<h3>Break It</h3>
-								<p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc tincidunt lobortis.</p>
+								<p>Utilize our tools and community to build a better understanding of how things work by reverse engineering and voiding waranties.</p>
 							</section>
 						</div>
 					</div>
@@ -38,16 +39,21 @@ layout: landing-page
 		<!-- Two -->
  			<section id="two" class="wrapper style2">
 				<header class="major">
-					<h2>Commodo accumsan aliquam</h2>
-					<p>Amet nisi nunc lorem accumsan</p>
+					<h2>Why Should You Become A Member?</h2>
+					<p>Here are a few reasons</p>
 				</header>
 				<div class="container">
 					<div class="row">
 						<div class="6u">
 							<section class="special">
-								<a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
-								<h3>Mollis adipiscing nisl</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
+								<!-- <video id ="vid" width="450" height="200" preload="true" loop="loop" autoplay="autoplay" muted="muted">
+								<source src="images/swiss-robot-harrasment.mp4" />
+								<source src="images/
+								swiss-robot-harrasment.webm" type='video/webm; codecs="vp8, vorbis"' />
+							    </video> -->
+								<div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://gfycat.com/ifr/WholeTastyHoneybadger' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+							    <h3>High-Tech Facilities</h3>
+								<p>Our building is filled with helpful robots that are always willing to lend a hand. Even if you'd rather they didn't.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -55,7 +61,7 @@ layout: landing-page
 						</div>
 						<div class="6u">
 							<section class="special">
-								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a> 
 								<h3>Neque ornare adipiscing</h3>
 								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
 								<ul class="actions">
