--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: landing-page
 					<div class="row">
 						<div class="4u">
 							<section class="special box">
-								<i class="icon fa-question major"></i>
+								<i class="icon fa-lightbulb-o major"></i>
 								<h3>Think It</h3>
 								<p>Collaborate with our diverse community of like-minded engineers, hackers, makers and artists of all skill levels.</p>
 							</section>
