Adding an equipment blurb
mostly testing out how this do. Also replaced some of the lorum ipsum with something equally useless.

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ layout: landing-page
 						<div class="6u">
 							  <section class="special">
 								    <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a> 
-								    <h3>Neque ornare adipiscing</h3>
-								    <p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
+								    <h3>Cutting Edge Equipment</h3>
+								    <p>We have a wide range of equipment, some of it even from this century. </p>
 								    <ul class="actions">
 									      <li><a href="#" class="button alt">Learn More</a></li>
 								    </ul>
