--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ layout: landing-page
 						</div>
 						<div class="6u">
 							  <section class="special">
-								    <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a> 
+								    <a href="#" class="image fit"><img src="images/MG_5027.jpg" alt="" /></a> 
 								    <h3>Cutting Edge Equipment</h3>
 								    <p>We have a wide range of equipment, some of it even from this century. </p>
 								    <ul class="actions">
