--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: landing-page
 							  <section class="special box">
 								    <i class="icon fa-warning major"></i>
 								    <h3>Break It</h3>
-								    <p>Utilize our tools and community to build a better understanding of how things work by reverse engineering and voiding waranties.</p>
+								    <p>Utilize our tools and community to build a better understanding of how things work by reverse engineering and voiding warranties.</p>
 							  </section>
 						</div>
 				</div>
@@ -73,7 +73,7 @@ layout: landing-page
 						</div>
 						<div class="6u">
 							  <section class="special">
-								    <a href="#" class="image fit"><img src="images/MG_5027.jpg" alt="" /></a> 
+								    <a href="images/MG_5027.jpg" target="_blank" class="image fit"><img src="images/MG_5027.jpg" alt="" /></a> 
 								    <h3>Cutting Edge Equipment</h3>
 								    <p>We have a wide range of equipment, some of it even from this century. </p>
 								    <ul class="actions">
