Added min height to motto boxes
added min height of 385px to all three moto boxes.

--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@ layout: landing-page
 		</header>
 		<div class="container">
 				<div class="row">
-						<div class="4u">
+						<div class="4u" style="min-height:385px;">
 							  <section class="special box">
 								    <i class="icon fa-question major"></i>
 								    <h3>Think It</h3>
-								    <p>Collaborate with our diverse community of like-minded engineers, hackers, makers and artists of all skill levels.                         </p>
+								    <p>Collaborate with our diverse community of like-minded engineers, hackers, makers, and artists of all skill levels. 		</p>
 							  </section>
 						</div>
-						<div class="4u">
+						<div class="4u" style="min-height:385px;">
 							  <section class="special box">
 								    <i class="icon fa-gear major"></i>
 								    <h3>Build It</h3>
-								    <p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry and electronics labs, a machine shop, and even an electron microscope.</p>
+								    <p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry, and electronics labs, a machine shop, and even a scanning electron microscope.</p>
 							  </section>
 						</div>
-						<div class="4u">
+						<div class="4u" style="min-height:385px;">
 							  <section class="special box">
 								    <i class="icon fa-warning major"></i>
 								    <h3>Break It</h3>
