--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@ layout: landing-page
 		<!-- One -->
 			<section id="one" class="wrapper style1">
 				<header class="major">
-					<h3>hack·er·space</h3>
-					<h4>/ˈhakərˌspās/<h4>
-					<p><i>noun:</i> a place in which people with an interest in computing or technology can gather to work on projects while sharing ideas, equipment, and knowledge.</p>
+					<h3>hackerspace</h3>
+					<p>Be inspired, bring your ideas, lend a hand. We provide the space, tools and knowledge to help you fullfil your vision.</p>
 				</header>
 				<div class="container">
 					<div class="row">
@@ -15,21 +14,21 @@ layout: landing-page
 							<section class="special box">
 								<i class="icon fa-lightbulb-o major"></i>
 								<h3>Think It</h3>
-								<p>Collaborate with our diverse community of like-minded engineers, hackers, makers and artists of all skill levels.</p>
+								<p>Collaborate with our diverse community of hackers, makers, engineers, and artists of all skill levels.</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-gear major"></i>
 								<h3>Build It</h3>
-								<p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry and electronics labs, a machine shop, and even an electron microscope.</p>
+								<p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry and electronics labs, a machine shop, and an electron microscope.</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section class="special box">
 								<i class="icon fa-warning major"></i>
 								<h3>Break It</h3>
-								<p>Utilize our tools and community to build a better understanding of how things work by reverse engineering and voiding waranties.</p>
+								<p>Utilize our tools and community to better understand how things work by reverse engineering them and voiding waranties.</p>
 							</section>
 						</div>
 					</div>
@@ -40,7 +39,6 @@ layout: landing-page
  			<section id="two" class="wrapper style2">
 				<header class="major">
 					<h2>Why Should You Become A Member?</h2>
-					<p>Here are a few reasons</p>
 				</header>
 				<div class="container">
 					<div class="row">
@@ -61,9 +59,9 @@ layout: landing-page
 						</div>
 						<div class="6u">
 							<section class="special">
-								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a> 
-								<h3>Neque ornare adipiscing</h3>
-								<p>Eget mi ac magna cep lobortis faucibus accumsan enim lacinia adipiscing metus urna adipiscing cep commodo id. Ac quis arcu amet. Arcu nascetur lorem adipiscing non faucibus odio nullam arcu lobortis. Aliquet ante feugiat. Turpis aliquet ac posuere volutpat lorem arcu aliquam lorem.</p>
+								<div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://gfycat.com/ifr/PessimisticAllAustralianfurseal' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+								<h3>Diverse Toolset</h3>
+								<p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry and electronics labs, a machine shop, and even an electron microscope.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -86,20 +84,17 @@ layout: landing-page
 						</div>
 						<div class="4u">
 							<section>
+								<h3>Our Location</h3>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.8339792438705!2d-119.82807528418451!3d34.43097198050462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e9409b426d0929%3A0x48d1c291e5c4e747!2sSanta+Barbara+Hackerspace!5e0!3m2!1sen!2sus!4v1518924436639" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+								</br>
+								<p>5782 Thornwood Drive</br>Goleta, CA 93117</p>
+							</section>
+							<hr />
+							<section>
 								<h3>Magna massa blandit</h3>
 								<p>Feugiat amet accumsan ante aliquet feugiat accumsan. Ante blandit accumsan eu amet tortor non lorem felis semper. Interdum adipiscing orci feugiat penatibus adipiscing col cubilia lorem ipsum dolor sit amet feugiat consequat.</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-							<hr />
-							<section>
-								<h3>Ante sed commodo</h3>
-								<ul class="alt">
-									<li><a href="#">Erat blandit risus vis adipiscing</a></li>
-									<li><a href="#">Tempus ultricies faucibus amet</a></li>
-									<li><a href="#">Arcu commodo non adipiscing quis</a></li>
-									<li><a href="#">Accumsan vis lacinia semper</a></li>
 								</ul>
 							</section>
 						</div>
