--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ layout: landing-page
 				<div class="row">
 						<div class="8u">
 							  <section>
-								    <h2>Mollis ut adipiscing</h2>
+								    <h2>History Of SBHX</h2>
 								    <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-								    <p>Vis accumsan feugiat adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor. Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.</p>
+								    <p>The Santa Barbara Hackerspace was founded in August of 2010 by Steve Phillips and Mike "Swiss" Bales. The goal was to build a space to allow the community to access tools and especially space, a real commodity in Santa Barbara. Our first meetings were held at Swiss' garage and quickly grew. Six months later we rented our first official space, 400 square feet of awesome. We grew from 12 members to over 20 and quickly ran out of space. A year later we upgraded to a new office, 2000 square feet and within a year managed to fill it with tools and added an additional 2000 square feet. By this time we had 40 plus members, a respecatble collection of tools and equipment, and offices for co-workers. Today we have a 4000 square foot shop, with a machine shop, electronics room, co-worker offices, classroom, an awesome membership of 50+, and an amazing team of volunteers to keep things running.</p>
 							  </section>
 						</div>
 						<div class="4u">
