--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@ layout: landing-page
 							</section>
 							<hr />
 							<section>
-								    <h3>Magna massa blandit</h3>
-								    <p>Feugiat amet accumsan ante aliquet feugiat accumsan. Ante blandit accumsan eu amet tortor non lorem felis semper. Interdum adipiscing orci feugiat penatibus adipiscing col cubilia lorem ipsum dolor sit amet feugiat consequat.</p>
+								    <h3>Open Source Community</h3>
+								    <p>The Santa Barbara Hackerspace believes strongly in the the open source movement. We are the home of the Tracksoar open source APRS tracker.</p>
 								    <ul class="actions">
-									      <li><a href="#" class="button alt">Learn More</a></li>
+									      <li><a href="http://Tracksoar.com" class="button alt">Tracksoar</a></li>
 								    </ul>
 							</section>
 						</div>
 					</div>
 				</div>
 			</section>
-			
-		
+
+
