--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@ layout: landing-page
 							</section>
 							<hr />
 							<section>
-								    <h3>Magna massa blandit</h3>
-								    <p>Feugiat amet accumsan ante aliquet feugiat accumsan. Ante blandit accumsan eu amet tortor non lorem felis semper. Interdum adipiscing orci feugiat penatibus adipiscing col cubilia lorem ipsum dolor sit amet feugiat consequat.</p>
+								    <h3>We Support Open Source!</h3>
+								    <p>We support Open Source hardware and software. We work on a wide variety of Open Source projects and when we do document them we put them on GitHub. Checkout some of our projects and contribute!</p>
 								    <ul class="actions">
-									      <li><a href="#" class="button alt">Learn More</a></li>
+									      <li><a href="github.com/sbhackerspace" class="button alt">SBHX GitHub</a></li>
 								    </ul>
 							</section>
 						</div>
