--- a/sign-up.html
+++ b/sign-up.html
@@ -38,7 +38,7 @@ sort: 9999
                     <p>Members are granted access to the Hackerspace according to their level of membership.</p>
                     <p><strong>Advanced</strong> members ($100/month) are given a card granting them 24/7 access to the space, the projects, and all of the tools.</p>
                     <p><strong>Standard</strong> members ($45/month) are welcome to come to the space and use the tools any time it is already open, and have the full experience and knowledge of our members at their disposal.</p>
-                    <p>The <strong>Student</strong> membership ($20/month) allows access to the space during restricted hours, and only when there are already members present. It is for students only.</p>
+                    <p>The <strong>Student</strong> membership ($20/month) allows access to the space during restricted hours. It is for students only.</p>
                     <p>In September 2013 we became a federally-recognized 501(c)(3) non-profit organization.</p>
                     <p><a href="/membership/">Learn more about Membership</a></p>
                     <div style="width: 100%;">
