Un-break PayPal subscription for renamed membership

--- a/sign-up.html
+++ b/sign-up.html
@@ -25,7 +25,7 @@ sort: 9999
                     <td><input name="on0" type="hidden" value="Membership Levels">Membership Levels</td>
                     </tr>
                     <tr>
-                    <td><select name="os0"><option value="Student Membership">Student Membership : $20.00 USD – monthly</option><option selected="selected" value="Standard Membership">Standard Membership : $45.00 USD – monthly</option><option value="Advanced Membership">Advanced Membership : $100.00 USD – monthly</option></select></td>
+                    <td><select name="os0"><option value="Basic Membership">Student Membership : $20.00 USD – monthly</option><option selected="selected" value="Standard Membership">Standard Membership : $45.00 USD – monthly</option><option value="Advanced Membership">Advanced Membership : $100.00 USD – monthly</option></select></td>
                     </tr>
                     </tbody>
                     </table>
