Adding privacy policy, updated wiki link url

--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@ sort: 9998
                 <section class="special box">
                     <h3>Contact Us</h3>
                         <ul class="actions">
-                            <li>General Inquiries: info@sbhackerspace.com</li>
+                            <li>General Inquiries: <a alt="Email the Santa Barbara Hackerspace" href="mailto:info@sbhackerspace" target="_blank">info@sbhackerspace.com</a></li>
                         </br>
                             <li>Phone: (805) 242-2533</li>
                         </br>
-                            <li>5782 Thornwood Drive</br> Goleta, CA</li>
+                            <li>5782 Thornwood Drive</br> Goleta, CA 93117</li>
                         </ul>
                 </section>
             </div>
