--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@ layout: landing-page
 		<div class="container">
 				<div class="row">
 						<div class="4u" style="min-height:385px;">
-							  <section class="special box">
+							  <section class="special box" style="min-height:461.667px;">
 								<i class="icon fa-lightbulb-o major"></i>
 								    <h3>Think It</h3>
 								<p>Collaborate with our diverse community of hackers, makers, engineers, and artists of all skill levels.</p>
 							  </section>
 						</div>
 						<div class="4u" style="min-height:385px;">
-							  <section class="special box">
+							  <section class="special box" style="min-height:461.667px;">
 								    <i class="icon fa-gear major"></i>
 								    <h3>Build It</h3>
 								    <p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry, and electronics labs, a machine shop, and even a scanning electron microscope.</p>
 							  </section>
 						</div>
 						<div class="4u" style="min-height:385px;">
-							  <section class="special box">
+							  <section class="special box" style="min-height:461.667px;">
 								    <i class="icon fa-warning major"></i>
 								    <h3>Break It</h3>
 								    <p>Utilize our tools and community to build a better understanding of how things work by reverse engineering and voiding warranties.</p>
