Fixed <a> tag to this repo from main website

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ layout: landing-page
 								    <h3>We Support Open Source!</h3>
 								    <p>We support Open Source hardware and software. We work on a wide variety of Open Source projects and when we do document them we put them on GitHub. Checkout some of our projects and contribute!</p>
 								    <ul class="actions">
-									      <li><a href="github.com/sbhackerspace" class="button alt">SBHX GitHub</a></li>
+									      <li><a href="https://github.com/sbhackerspace" class="button alt">SBHX GitHub</a></li>
 								    </ul>
 							</section>
 						</div>
