Move non-profit and business hours to home page

--- a/index.html
+++ b/index.html
@@ -4,102 +4,129 @@ layout: landing-page
 
 <!-- One -->
 <section id="one" class="wrapper style1">
-		<header class="major">
-					<h3>hackerspace</h3>
-					<p>Be inspired, bring your ideas, lend a hand. We provide the space, tools and knowledge to help you fullfil your vision.</p>
-		</header>
-		<div class="container">
-				<div class="row">
-						<div class="4u" style="min-height:385px;">
-							  <section class="special box" style="min-height:461.667px;">
-								<i class="icon fa-lightbulb-o major"></i>
-								    <h3>Think It</h3>
-								<p>Collaborate with our diverse community of hackers, makers, engineers, and artists of all skill levels.</p>
-							  </section>
-						</div>
-						<div class="4u" style="min-height:385px;">
-							  <section class="special box" style="min-height:461.667px;">
-								    <i class="icon fa-gear major"></i>
-								    <h3>Build It</h3>
-								    <p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry, and electronics labs, a machine shop, and even a scanning electron microscope.</p>
-							  </section>
-						</div>
-						<div class="4u" style="min-height:385px;">
-							  <section class="special box" style="min-height:461.667px;">
-								    <i class="icon fa-warning major"></i>
-								    <h3>Break It</h3>
-								    <p>Utilize our tools and community to build a better understanding of how things work by reverse engineering and voiding warranties.</p>
-							  </section>
-						</div>
-				</div>
-		</div>
+    <header class="major">
+        <h3>hackerspace</h3>
+        <p>Be inspired, bring your ideas, lend a hand. We provide the space, tools and knowledge to help you fullfil your vision.</p>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="4u" style="min-height:385px;">
+                <section class="special box" style="min-height:461.667px;">
+                    <i class="icon fa-lightbulb-o major"></i>
+                    <h3>Think It</h3>
+                    <p>Collaborate with our diverse community of hackers, makers, engineers, and artists of all skill levels.</p>
+                </section>
+            </div>
+            <div class="4u" style="min-height:385px;">
+                <section class="special box" style="min-height:461.667px;">
+                    <i class="icon fa-gear major"></i>
+                    <h3>Build It</h3>
+                    <p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry, and electronics labs, a machine shop, and even a scanning electron microscope.</p>
+                </section>
+            </div>
+            <div class="4u" style="min-height:385px;">
+                <section class="special box" style="min-height:461.667px;">
+                    <i class="icon fa-warning major"></i>
+                    <h3>Break It</h3>
+                    <p>Utilize our tools and community to build a better understanding of how things work by reverse engineering and voiding warranties.</p>
+                </section>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- Two -->
 <section id="two" class="wrapper style2">
-		<header class="major">
-				<h2>Why Should You Become A Member?</h2>
-		</header>
-		<div class="container">
-				<div class="row">
-						<div class="6u">
-							  <section class="special">
-								    <!-- <video id ="vid" width="450" height="200" preload="true" loop="loop" autoplay="autoplay" muted="muted">
-								         <source src="images/swiss-robot-harrasment.mp4" />
-								         <source src="images/
-								         swiss-robot-harrasment.webm" type='video/webm; codecs="vp8, vorbis"' />
-							           </video> -->
-								    <div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://gfycat.com/ifr/WholeTastyHoneybadger' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
-							      <h3>High-Tech Facilities</h3>
-								    <p>Our building is filled with helpful robots that are always willing to lend a hand. Even if you'd rather they didn't.</p>
-								    <ul class="actions">
-									      <li><a href="#" class="button alt">Learn More</a></li>
-								    </ul>
-							  </section>
-						</div>
-						<div class="6u">
-							  <section class="special">
-								<div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://gfycat.com/ifr/PessimisticAllAustralianfurseal' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
-								<h3>Diverse Toolset</h3>
-								<p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry and electronics labs, a machine shop, and even an electron microscope.</p>
-								    <ul class="actions">
-									      <li><a href="#" class="button alt">Learn More</a></li>
-								    </ul>
-							  </section>
-						</div>
-				</div>
-		</div>
+    <header class="major">
+        <h2>Why Should You Become A Member?</h2>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="6u">
+                <section class="special">
+                    <div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://gfycat.com/ifr/WholeTastyHoneybadger' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+                    <h3>High-Tech Facilities</h3>
+                    <p>Our building is filled with helpful robots that are always willing to lend a hand. Even if you'd rather they didn't.</p>
+                    <ul class="actions">
+                        <li><a href="#" class="button alt">Learn More</a></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="6u">
+                <section class="special">
+                    <div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://gfycat.com/ifr/PessimisticAllAustralianfurseal' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+                    <h3>Diverse Toolset</h3>
+                    <p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry and electronics labs, a machine shop, and even an electron microscope.</p>
+                    <ul class="actions">
+                        <li><a href="#" class="button alt">Learn More</a></li>
+                    </ul>
+                </section>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- Three -->
 <section id="three" class="wrapper style1">
-		<div class="container">
-				<div class="row">
-						<div class="8u">
-							  <section>
-								    <h2>History Of SBHX</h2>
-								    <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-								    <p>The Santa Barbara Hackerspace was founded in August of 2010 by Steve Phillips and Mike "Swiss" Bales. The goal was to build a space to allow the community to access tools and especially space, a real commodity in Santa Barbara. Our first meetings were held at Swiss' garage and quickly grew. Six months later we rented our first official space, 400 square feet of awesome. We grew from 12 members to over 20 and quickly ran out of space. A year later we upgraded to a new office, 2000 square feet and within a year managed to fill it with tools and added an additional 2000 square feet. By this time we had 40 plus members, a respecatble collection of tools and equipment, and offices for co-workers. Today we have a 4000 square foot shop, with a machine shop, electronics room, co-worker offices, classroom, an awesome membership of 50+, and an amazing team of volunteers to keep things running.</p>
-							  </section>
-						</div>
-						<div class="4u">
-							  <section>
-								<h3>Our Location</h3>
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.8339792438705!2d-119.82807528418451!3d34.43097198050462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e9409b426d0929%3A0x48d1c291e5c4e747!2sSanta+Barbara+Hackerspace!5e0!3m2!1sen!2sus!4v1518924436639" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-								</br>
-								<p>5782 Thornwood Drive</br>Goleta, CA 93117</p>
-							</section>
-							<hr />
-							<section>
-								    <h3>We Support Open Source!</h3>
-								    <p>We support Open Source hardware and software. We work on a wide variety of Open Source projects and when we do document them we put them on GitHub. Checkout some of our projects and contribute!</p>
-								    <ul class="actions">
-									      <li><a href="https://github.com/sbhackerspace" class="button alt">SBHX GitHub</a></li>
-								    </ul>
-							</section>
-						</div>
-					</div>
-				</div>
-			</section>
-			
-		
+    <div class="container">
+        <div class="row">
+            <div class="8u">
+                <section>
+                    <h2>History Of SBHX</h2>
+                    <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+                    <p>The Santa Barbara Hackerspace was founded in August of 2010 by Steve Phillips and Mike "Swiss" Bales. The goal was to build a space to allow the community to access tools and especially space, a real commodity in Santa Barbara. Our first meetings were held at Swiss' garage and quickly grew. Six months later we rented our first official space, 400 square feet of awesome. We grew from 12 members to over 20 and quickly ran out of space. A year later we upgraded to a new office, 2000 square feet and within a year managed to fill it with tools and added an additional 2000 square feet. By this time we had 40 plus members, a respecatble collection of tools and equipment, and offices for co-workers. Today we have a 4000 square foot shop, with a machine shop, electronics room, co-worker offices, classroom, an awesome membership of 50+, and an amazing team of volunteers to keep things running.</p>
+                </section>
+            </div>
+            <div class="4u">
+                <section>
+                    <h3>Our Location</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.8339792438705!2d-119.82807528418451!3d34.43097198050462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e9409b426d0929%3A0x48d1c291e5c4e747!2sSanta+Barbara+Hackerspace!5e0!3m2!1sen!2sus!4v1518924436639" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </br>
+                    <p>5782 Thornwood Drive</br>Goleta, CA 93117</p>
+                </section>
+                <hr/>
+                <section>
+                    <h3>We Support Open Source!</h3>
+                    <p>We support Open Source hardware and software. We work on a wide variety of Open Source projects and when we do document them we put them on GitHub. Checkout some of our projects and contribute!</p>
+                    <ul class="actions">
+                        <li><a href="https://github.com/sbhackerspace" class="button alt">SBHX GitHub</a></li>
+                    </ul>
+                </section>
+            </div>
+        </div>
+    </div>
+</section>
+<hr/>
+<section>
+    <div class="container">
+        <div class="row double">
+            <div class="6u">
+                <div class="row collapse-at-2">
+                    <div class="6u">
+                        <h3>Contact Us</h3>
+                        <ul class="actions">
+                            <li>General Inquiries: info@sbhackerspace.com</li>
+                        </br>
+                            <li>Phone: (805) 242-2533</li>
+                        </br>
+                            <li>5782 Thornwood Drive</br> Goleta, CA</li>
+                        </ul>
+                    </div>
+                    <div class="6u">
+                        <h3>Hours of Operation </h3>
+                        <h3>for non-members:</h3>
+                        <ul class="actions">
+                            <li>Monday - Friday: By appointment</li>
+                            </br>
+                            <li>Saturday: Open meeting 2:00 pm until midnight</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="6u">
+                <h2>Charitable Contributions</h2>
+                <p>Santa Barbara Hackerspace is a 501(c)(3) federally recognized non-profit. Donations are tax deductible in The United States except where prohibited by law.</p>
+            </div>
+        </div>
+    </div>
+<section>
