--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img style="width:100%;" src="/images/carousel/balloon.jpg" alt="Weather Balloon Launch">
+            <img style="width:100%;" src="/assets/images/carousel/balloon.jpg" alt="Weather Balloon Launch">
             <div class="carousel-caption">
                 <h1>Santa Barbara Hackerspace</h1>
                 <p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
@@ -28,7 +28,7 @@ layout: default
             </div>
         </div>
         <div class="item">
-            <img style="width:100%;" src="/images/carousel/eagle_cad_class.jpg" alt="Swiss teaching an Eagle CAD class">
+            <img style="width:100%;" src="/assets/images/carousel/eagle_cad_class.jpg" alt="Swiss teaching an Eagle CAD class">
             <div class="carousel-caption">
                 <h1>Santa Barbara Hackerspace</h1>
                 <p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
@@ -38,7 +38,7 @@ layout: default
             </div>
         </div>
         <div class="item">
-            <img style="width:100%;" src="/images/carousel/sem_operation.jpg" alt="A visitor checking out the SEM in operation">
+            <img style="width:100%;" src="/assets/images/carousel/sem_operation.jpg" alt="A visitor checking out the SEM in operation">
             <div class="carousel-caption">
                 <h1>Santa Barbara Hackerspace</h1>
                 <p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
@@ -48,7 +48,7 @@ layout: default
             </div>
         </div>
         <div class="item">
-            <img style="width:100%;" src="/images/carousel/old_space.jpg" alt="A general meeting at our previous location">
+            <img style="width:100%;" src="/assets/images/carousel/old_space.jpg" alt="A general meeting at our previous location">
             <div class="carousel-caption">
                 <h1>Santa Barbara Hackerspace</h1>
                 <p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
@@ -58,7 +58,7 @@ layout: default
             </div>
         </div>
         <div class="item">
-            <img style="width:100%;" src="/images/carousel/sbhx_class.jpg" alt="An class from the Old Hackerspace">
+            <img style="width:100%;" src="/assets/images/carousel/sbhx_class.jpg" alt="An class from the Old Hackerspace">
             <div class="carousel-caption">
                 <h1>Santa Barbara Hackerspace</h1>
                 <p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
@@ -68,7 +68,7 @@ layout: default
             </div>
         </div>
         <div class="item">
-            <img style="width:100%;" src="/images/carousel/sem_inside.jpg" alt="A perspective shot of Swiss working on the SEM">
+            <img style="width:100%;" src="/assets/images/carousel/sem_inside.jpg" alt="A perspective shot of Swiss working on the SEM">
             <div class="carousel-caption">
                 <h1>Santa Barbara Hackerspace</h1>
                 <p class="carousel-text">The World&apos;s Greatest Hackerspace In Santa Barbara</p>
@@ -155,7 +155,7 @@ layout: default
             <div class="8u">
                 <section>
                     <h2>History Of SBHX</h2>
-                    <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+                    <a href="#" class="image fit"><img src="/assets/images/banners/pic03.jpg" alt="" /></a>
                     <p>The Santa Barbara Hackerspace was founded in August of 2010 by Steve Phillips and Mike "Swiss" Bales. The goal was to build a space to allow the community to access tools and especially space, a real commodity in Santa Barbara. Our first meetings were held at Swiss' garage and quickly grew. Six months later we rented our first official space, 400 square feet of awesome. We grew from 12 members to over 20 and quickly ran out of space. A year later we upgraded to a new office, 2000 square feet and within a year managed to fill it with tools and added an additional 2000 square feet. By this time we had 40 plus members, a respecatble collection of tools and equipment, and offices for co-workers. Today we have a 4000 square foot shop, with a machine shop, electronics room, co-worker offices, classroom, an awesome membership of 50+, and an amazing team of volunteers to keep things running.</p>
                 </section>
             </div>
