--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ layout: default
                     <h3>Our Location</h3>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.8339792438705!2d-119.82807528418451!3d34.43097198050462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e9409b426d0929%3A0x48d1c291e5c4e747!2sSanta+Barbara+Hackerspace!5e0!3m2!1sen!2sus!4v1518924436639" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </br>
-                    <p>5782 Thornwood Drive</br>Goleta, CA 93117</p>
+                    <p>302 Pine St</br>Goleta, CA 93117</p>
                 </section>
                 <hr/>
                 <section>
@@ -189,7 +189,7 @@ layout: default
                         <ul class="actions">
                             <li>General Inquiries: info@sbhackerspace.com</li>
                             </br>
-                            <li>5782 Thornwood Drive</br> Goleta, CA</li>
+                            <li>302 Pine Street</br> Goleta, CA</li>
                         </ul>
                     </div>
                     <div class="6u">
