attempt at removing garbage from gifs

--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@ layout: default
         <div class="row">
             <div class="6u">
                 <section class="special">
-                    <div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmRmYnM5bTRseXMyaTd1amhzZzZuZzJsaTF3cHRjemlwMXhsc285ZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/KZ30cof30ZafpduUn5/giphy.gif' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+                    <div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://giphy.com/embed/KZ30cof30ZafpduUn5' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
                     <h3>High-Tech Facilities</h3>
                     <p>Our building is filled with helpful robots that are always willing to lend a hand. Even if you'd rather they didn't.</p>
                 </section>
             </div>
             <div class="6u">
                 <section class="special">
-                    <div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbHF0bjg0MDBrZnc0N3p1OTFiZWRrYXo5M2E1ZXc0cHUyN2g4MDRncSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/qLoLgqBHCfWRqbUids/giphy.gif' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
+                    <div class="image fit" style='position:relative;padding-bottom:57%'><iframe src='https://giphy.com/embed/qLoLgqBHCfWRqbUids' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
                     <h3>Diverse Toolset</h3>
                     <p>We are equipped with laser cutters, CNC machines, 3D printers, chemistry and electronics labs, a machine shop, and even an electron microscope.</p>
                 </section>
